# de-challenge

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
DataModel/: README.md  data-model.drawio
Deployment/: README.md
app/: main.py
app/utils/: extractor.py  report.py
