[tool.poetry]
name = "de-challenge"
version = "0.1.0"
description = ""
authors = ["Nicolas Lazcani <nlazcani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3.4"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
